--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "toastr": "^2.1.3",
     "angular-toastr": "^2.1.1",
     "angular-bootstrap": "^2.5.0",
-    "angular-local-storage": "^0.5.2"
+    "angular-local-storage": "^0.5.2",
+    "morris.js": "morrisjs#^0.5.1"
   }
 }
