--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.15.1",
     "jsonwebtoken": "^7.3.0",
     "mysql": "^2.13.0",
+    "request": "^2.81.0",
     "sequelize": "^3.30.2",
     "tedious": "^1.14.0"
   },
